kubernetes/service-unstable.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: coffee-service-unstable
  labels:
    app: coffee-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: coffee-service
        version: "1.0"
        serving: "true"
    spec:
      containers:
        - name: coffee-service
          image: sbishyr/coffee-service:1.0-unstable
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
