kubernetes/service-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-service-v2
  labels:
    app: coffee-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: coffee-service
        version: "2.0"
        serving: "true"
    spec:
      containers:
        - name: coffee-service
          image: sbishyr/coffee-service:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
  selector:
    matchLabels:
      app: coffee-service
      version: "2.0"
      serving: "true"
