kubernetes/coffee-service.yaml
##################################################################################################
# Coffee service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-service
  labels:
    app: coffee-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: coffee-service
        version: "1.0"
        serving: "true"
    spec:
      containers:
        - name: coffee-service
          image: sbishyr/coffee-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /coffee
              port: 8080
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /coffee
              port: 8080
            initialDelaySeconds: 20
  selector:
    matchLabels:
      app: coffee-service
      version: "1.0"
      serving: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-service
  labels:
    app: coffee-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: coffee-service
    serving: "true"
